[package]
name = "kaisendon_saba"
version = "0.1.0"
authors = ["wraikny <writtenknown@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
rocket = "0.4.1"
rocket_contrib = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"